--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=election-management-system
+server.port=8081
 
 # Database URL
 spring.datasource.url=jdbc:mysql://localhost:3306/ecms
@@ -8,5 +9,5 @@ spring.datasource.username=root
 spring.datasource.password=avnish18
 
 # Hibernate properties
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
